# Knobula

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  build.ps1  build.sh  clean_old_files.ps1
.claude/: settings.local.json
.github/workflows/: build-macos.yml  build.yml
Knobula/: AAX_SETUP.md  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  build.ps1  clean.bat  clean.ps1  clean.sh
Knobula/.claude/: settings.local.json
Knobula/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Knobula/Source/DSP/: HighLowPassFilters.cpp  HighLowPassFilters.h  HysteresisProcessor.cpp  HysteresisProcessor.h  MidSideProcessor.cpp  MidSideProcessor.h  PassiveEQ.cpp  PassiveEQ.h  VUMeter.cpp  VUMeter.h
Knobula/Source/UI/: AetheriLookAndFeel.cpp  AnalogKnob.cpp  AnalogKnob.h  BandControl.cpp  BandControl.h  HysteresisPanel.cpp  HysteresisPanel.h  KnobulaLookAndFeel.cpp  KnobulaLookAndFeel.h  NebulaVisualizer.cpp  NebulaVisualizer.h  PhaseCorrelationMeter.cpp  PhaseCorrelationMeter.h  TubeGlowEffect.cpp  TubeGlowEffect.h  VUMeterComponent.cpp  VUMeterComponent.h
Knobula/Source/Utils/: ColorPalette.h  Parameters.cpp  Parameters.h  Presets.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: HighLowPassFilters.h  HysteresisProcessor.cpp  HysteresisProcessor.h  MidSideProcessor.cpp  MidSideProcessor.h  VUMeter.cpp
Source/UI/: AetheriLookAndFeel.h  AnalogKnob.cpp  AnalogKnob.h  BandControl.cpp  NebulaVisualizer.cpp  NebulaVisualizer.h  TubeGlowEffect.cpp  VUMeterComponent.cpp
Source/Utils/: Parameters.cpp  Parameters.h  Presets.cpp
